[package]
name = "nannou-pde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"

[[example]]
name = "hello"
path = "src/hello_nannou.rs"

[[example]]
name = "mouse"
path = "src/mouse-interaction.rs"

[[example]]
name = "mouse_button"
path = "conditional/mouse_button.rs"
