[package]
name = "nannou-pde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"

[[example]]
name = "hello"
path = "src/hello_nannou.rs"

[[example]]
name = "mouse"
path = "src/mouse-interaction.rs"

[[example]]
name = "mouse_button"
path = "conditional/mouse_button.rs"

[[example]]
name = "second_pen"
path = "conditional/second_pen.rs"

[[example]]
name = "patterns"
path = "conditional/patterns.rs"

[[example]]
name = "animation-mouse"
path = "animation/mouse.rs"

[[example]]
name = "animation-frame"
path = "animation/frame.rs"

[[example]]
name = "animation-clock"
path = "animation/clocks.rs"

[[example]]
name = "random-circles"
path = "random/random-circles.rs"

[[example]]
name = "random-brush"
path = "random/brush.rs"

[[example]]
name = "random-shudder"
path = "random/shudder.rs"
