[package]
name = "nannou-pde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"

[[example]]
name = "hello"
path = "hello-world/hello_nannou.rs"

[[example]]
name = "mouse"
path = "hello-world/mouse-interaction.rs"

[[example]]
name = "mouse_button"
path = "conditional/mouse_button.rs"

[[example]]
name = "second_pen"
path = "conditional/second_pen.rs"

[[example]]
name = "patterns"
path = "conditional/patterns.rs"

[[example]]
name = "animation-mouse"
path = "animation/mouse.rs"

[[example]]
name = "animation-frame"
path = "animation/frame.rs"

[[example]]
name = "animation-clock"
path = "animation/clocks.rs"

[[example]]
name = "random-circles"
path = "random/random-circles.rs"

[[example]]
name = "random-brush"
path = "random/brush.rs"

[[example]]
name = "random-shudder"
path = "random/shudder.rs"

[[example]]
name = "balloon"
path = "variable/balloon.rs"

[[example]]
name = "move-balloon"
path = "variable/moving_balloon.rs"

[[example]]
name = "line-preview"
path = "variable/line_preview.rs"

[[example]]
name = "bool-light"
path = "variable/bool_light.rs"

[[example]]
name = "random-walk"
path = "variable/random_walk.rs"

[[example]]
name = "multi-pen"
path = "variable/multi_pen.rs"

[[example]]
name = "ripple"
path = "iteration/ripple.rs"

[[example]]
name = "ripple-more"
path = "iteration/ripple_more.rs"

[[example]]
name = "brush"
path = "iteration/brush.rs"

[[example]]
name = "grunge"
path = "iteration/grunge.rs"

[[example]]
name = "gogh"
path = "image/VanGogh.rs"

[[example]]
name = "stamp"
path = "image/stamp.rs"

[[example]]
name = "image-pen"
path = "image/image_pen.rs"

[[example]]
name = "grid-1d"
path = "grid/grid_1d.rs"
